[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"
serde = "1.0.136"
serde_json = "1.0.133"
serde_derive = "1.0.136"
regex = "1.11.1"
chrono = "0.4.38"
toml = "0.8.19"
