[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"
default-run = "advent_of_code"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"
serde = "1.0.219"
serde_json = "1.0.140"
serde_derive = "*"
regex = "1.11.1"
chrono = "0.4.41"
toml = "0.8.22"
mod_exp = "*"
